--- a/style.css
+++ b/style.css
@@ -1,74 +1,5 @@
-/*based*/
-* {
-    margin: 0;
-    padding: 0;
-}
-
-body {
-    font-family: 'Roboto', sans-serif;
-}
-
-a {
-    color: black;
-    text-decoration: none;
-}
-li {
-    list-style: none;
-}
-
-/*navigation*/
-.topNav {
-    max-width: 1440px;
-    width: 100%;
-    height: 40px;
-    margin: 0 auto;
-    background: rgba(244, 244, 244, 1);
-}
-
-.topNavBlock {
-    position: relative;
-    float: right;
-    margin-right: 30px;
-}
-
-.TopNavInfo {
-    height: 40px;
-    display: flex;
-    align-items: center;
-}
-
-.TopNavInfo p,
-.TopNavInfo a,
-.TopNavInfo div {
-    margin-left: 25px;
-    color: rgba(170, 170, 170, 1);
-
-}
 
 
-
-.mainNav {
-    max-width: 1440px;
-    width: 100%;
-    height: 100px;
-    margin: 0 auto;
-    display: flex;
-    justify-content: space-around;
-    align-items: center;
-    border-bottom: rgba(224, 224, 224, 1) 1px solid;
-}
-
-.mainNav a {
-    margin-left: 100px;
-}
-
-.mainNavLinks {
-    font-weight: 500;
-}
-
-.mainNav i {
-    font-size: 30px;
-}
 
 /*main*/
 
@@ -105,7 +36,8 @@ main img {
 }
 
 .mainText p {
-    width: 500px;
+    max-width: 500px;
+    width: 100%;
     line-height: 40px;
     font-size: 24px;
     color: rgba(170, 170, 170, 1);
@@ -117,7 +49,7 @@ main img {
     max-width: 1440px;
     width: 100%;
     margin: 0 auto;
-    margin-top: 200px;
+    margin-top: 80px;
 }
 
 .sectionOneContent {
@@ -234,7 +166,7 @@ main img {
     max-width: 1340px;
     width: 100%;
     height: 800px;
-    margin-top: 240px;
+    margin-top: 150px;
     background-image: url(/img/reviews.svg);
 }
 .sectionTwoReviewBlock {
@@ -347,6 +279,7 @@ main img {
     display: flex;
     flex-direction: column;
     justify-content: center;
+    margin-right: 90px;
 }
 .sectionThreeContentBlock2 h1 {
     margin-left: 90px;
@@ -369,7 +302,7 @@ main img {
     margin-top: 60px;
 }
 .sectionThreeContentRow2 img {
-    margin-left: 90px;
+    /* margin-left: 90px; */
 }
 
 .sectionThreeContentRow2 h1, .sectionThreeContentRow2 p {
@@ -408,6 +341,10 @@ main img {
    /* margin-top: 15px;*/
 
 }
+.shipingInfo img {
+    max-width: 800px;
+    width: 100%;
+}
 .sector4button {
     background: rgba(70, 133, 110, 1);
     border-radius: 2px;
@@ -427,124 +364,88 @@ main img {
     color: rgba(170, 170, 170, 1);
 }
 
-/*footer*/
+/*adaptive*/
 
-footer {
-    max-width: 1440px;
-    width: 100%;
-    height: 619px;
-    background-color: rgba(43, 43, 43, 1);
-    margin: 0 auto;
-    margin-top: 80px;
-}
-.footerBlock {
-    display: flex;
-    max-width: 1440px;
-    width: 100%;
-    justify-content:space-between;
-}
-footer li {
-    margin-top: 4px;
-}
+@media (max-width:800px) {
+    .mainText {
+        flex-direction: column;
+        gap: 20px;
+    }
+    .mainText h1 {
+        text-align: center;
+        max-width: 500px;
+    }
+    .mainText p {
+        text-align: center;
+    }
+    /**/
+    .sectionOneContent {
+        padding-right: 10px;
+        padding-left: 10px;
+        box-sizing: border-box;
+    }
+    .sectionOneContentBlock p {
+        text-align: center;
+    }
+    .sectionOneContentBlock {
+        margin: 0;
+    }
+    .sectionOneBrands h1 {
+        margin-top: 0;
+    }
+    /**/
+    .sectionTwo {
+        margin-top: 80px;
+    }
+    .sectionTwo h1, .sectionThreeText p, .sectionThreeText h2 {
+        text-align: center;
+    }
+    .sectionTwoInfo a {
+        margin: 0 auto;
+        margin-top: 20px;
+    }
 
-.footerUlOne {
-    margin-top: 19px;
-}
-.footerUlTwo {
-    margin-top: 19px;
-}
-.footerUlThree {
-    margin-top: 19px;
-}
-.footerAboutText1 {
-    margin-top: 44px;
-}
-.footerSupportText1 {
-    margin-top: 25px;
-}
-.footerSupportSpan {
-    display: block;
-    margin-top: 25px;
-}
-.footerFollowUsSocial {
-    margin-top: 10px;
-}
-.footerFollowUsSocial i {
-    font-size: 25px;
-    margin: 5px;
-}
-
-
-.footerInputText1 {
-    margin-top: 15px;
-}
-.input1 {
-    max-width: 327px;
-    width: 100%;
-    height: 54px;
-    border-radius: 1px;
-    border: solid 1px rgba(255, 255, 255, 0.4);
-    background-color: rgba(43, 43, 43, 1);
-    margin-top: 30px;
-    color: white;
-    font-size: 30px;
-}
-.checkboxMenu {
-    display: flex;
-    margin-top: 94px;
-    align-items: flex-start;
-}
-.checkboxMenu p {
-    color: rgba(255, 255, 255, 0.5);
-    line-height: 12.89px;
-    letter-spacing: 2.4px;
-    font-size: 12px;
-    margin-left: 20px;
-
-    max-width: 369px;
-    width: 100%;
+    .sectionTwoText {
+        flex-direction: column;
+        text-align: center;
+        align-items: center;
+    }
+    .sectionTwoReviewBlock {
+        margin: 0;
+        display: flex;
+        justify-content: center;
+        align-items: center;
+    }
+    .reviewBlockOne {
+        /* display: flex;
+        flex-direction: column;
+        align-items: center; */
+    }
+    /**/
+    .sectionThreeContentRow1 {
+        flex-direction: column;
+        align-items: center;
+    }
+    .sectionThreeContentBlock2 h1, .sectionThreeContentBlock2 p {
+        margin-left: 0;
+        text-align: center;
+        max-width: 100%;
+    }
+    .sectionThreeContentRow2 {
+        flex-direction: column-reverse;
+        align-items: center;
+    }
+    .sectionThreeContentRow2 img {
+        margin-left: 0;
+    }
+    .sectionThreeContentRow3 {
+        flex-direction: column;
+        align-items: center;
+    }
+    /**/
+    .stars {
+        max-width: 300px;
+        width: 100%;
+    }
     
-}
-.footerInput a {
-    display: block;
-    position: relative;
-    float: right;
-    margin-top: 60px;
-
-    font-size: 14px;
-    letter-spacing: 2.3px;
-}
-
-
-
-.footerAbout a, .footerAbout p, .footerSupport p, .footerSupport a, .footerSupport span, .footerFollowUs i, .footerFollowUs, .footerInput, .footerInput a, .return a{
-    color: white;
-    font-weight: 400;
-}
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-.return {
-    display: flex;
-    flex-direction: column;
-    justify-content: end;
-}
-.return a {
-    writing-mode: vertical-rl;
 }
