--- a/base.css
+++ b/base.css
@@ -15,6 +15,41 @@ a {
 li {
     list-style: none;
 }
+.container {
+    overflow: hidden;
+}
+
+/*появление*/
+
+.element-animation {
+    /* margin: 2rem 0; */
+    /* font-size: 3rem; */
+    
+    /* Скроем элемент в начальном состоянии */
+    opacity: 0;
+    transform: translateY(20px);
+  }
+  
+  .element-animation.element-show {
+    opacity: 1;
+    transition: all 1.5s;
+    transform: translateY(0%);
+  }
+
+
+
+
+
+@media (max-width:1215px) {
+    .element-animation {
+        opacity: 1;
+        transform: none;
+    }
+}
+
+
+
+
 
 
 
