--- a/nav.css
+++ b/nav.css
@@ -52,8 +52,110 @@
     font-size: 30px;
 }
 
+
+
+/*adapriveNav*/
+
+.adaptiveNavigation {
+    display: none;
+}
+.burger {
+    display: flex;
+    flex-direction: column;
+    justify-content: center;
+    width: 50px;
+    height: 50px;
+    gap: 5px;
+    float: right;
+    padding-right: 15px;
+    cursor: pointer;
+    
+}
+.burger span {
+    display: block;
+    width: 50px;
+    height: 3px;
+    border: 1px solid;
+    background-color: black;
+
+}
+.adaptiveNavigation {
+    display: none;
+    width: 100%;
+    height: 50px;
+    position: fixed;
+    background-color: white;
+}
+.burgerBlock {
+    width: 100%;
+    background-color: white;
+    border: solid;
+    height: 345px;
+    position: fixed;
+    top: 50px;
+    display: none;
+    animation: slideInFromBottom 0.4s ease-in-out;
+    z-index: 999;
+}
+
+
+.burgerBlock.slideOutToBottom {
+    animation: slideOutToBottom 0.4s ease-in-out; /* Добавляем анимацию закрытия */
+  }
+  
+
 @media (max-width:800px) {
     nav {
         display: none;
     }
+    .adaptiveNavigation {
+        display: block;
+        z-index: 999;
+    }
+    .burgerLogo {
+        display: flex;
+        justify-content: center;
+        margin-top: 50px;
+    }
+    .mainNavLinks {
+        display: flex;
+        justify-content: center;
+        align-items: center;
+        flex-direction: column;
+        padding-top: 40px;
+        gap: 25px;
+    }
+    .adaptiveBasket {
+        display: flex;
+        justify-content: center;
+        font-weight: 600;
+        margin-top: 25px;
+        font-size: 18px;
+    }
+    .TopNavInfo {
+        justify-content: center;
+        margin-top: 10px;
+    }
+
+    
 }
+
+@keyframes slideInFromBottom {
+    0% {
+      transform: translateY(-100%);
+    }
+    100% {
+      transform: translateY(0);
+    }
+  }
+
+  @keyframes slideOutToBottom {
+    0% {
+      transform: translateY(0);
+    }
+    100% {
+      transform: translateY(-100%);
+    }
+  }
+  
+ 
