--- a/style.css
+++ b/style.css
@@ -114,7 +114,7 @@ main img {
     max-width: 1440px;
     width: 100%;
     margin: 0 auto;
-    margin-top: 180px;
+    margin-top: 100px;
 }
 /*slider*/
 /*slider*/
@@ -280,6 +280,7 @@ main img {
     flex-direction: column;
     justify-content: center;
     margin-right: 90px;
+    padding-left: 10px;
 }
 .sectionThreeContentBlock2 h1 {
     margin-left: 90px;
@@ -421,6 +422,9 @@ main img {
         flex-direction: column;
         align-items: center; */
     }
+    .sectionTwo h1, .sectionThreeText p {
+        font-size: 35px;
+    }
     /**/
     .sectionThreeContentRow1 {
         flex-direction: column;
@@ -442,10 +446,19 @@ main img {
         flex-direction: column;
         align-items: center;
     }
+    .sectionThreeContentBlock2 {
+        margin-right: 0;
+    }
+    .shipingInfo h1 {
+        text-align: center;
+    }
     /**/
     .stars {
         max-width: 300px;
         width: 100%;
     }
     
+    .sectionThreeContentBlock2 {
+        padding-left: 0;
+    }
 }
